--- a/asmplugin/build.gradle
+++ b/asmplugin/build.gradle
@@ -6,6 +6,24 @@ repositories {
     jcenter()
     google()
 }
+
+sourceSets {
+    main {
+        groovy {
+            srcDir 'src/main/groovy'
+        }
+
+        java {
+            srcDir 'src/main/java'
+        }
+
+        resources {
+            srcDir 'src/main/resources'
+        }
+    }
+}
+
+
 dependencies {
     //gradle sdk
     implementation gradleApi()
@@ -16,12 +34,16 @@ dependencies {
     //ASM相关依赖
     implementation 'org.ow2.asm:asm:7.1'
     implementation 'org.ow2.asm:asm-commons:7.1'
+
+    implementation 'com.android.tools.lint:lint:26.0.1'
+    implementation 'com.android.tools.lint:lint-api:26.0.1'
+    implementation 'com.android.tools.lint:lint-checks:26.0.1'
 }
 //uploadArchives是将已经自定义好了插件打包到本地Maven库里面去了，
 // 你也可以选择打包到远程服务器中。其中，
 // group和version是我们之后配置插件地址时要用到的。
 group = 'com.lanshifu.asmplugin'
-version = '1.3'
+version = '1.4.2'
 uploadArchives {
     repositories {
         mavenDeployer {
